Starting to structure db

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,20 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+
+    "paths" : {
+      "crypto": ["./node_modules/crypto-browserify"],
+      "stream": ["./node_modules/stream-browserify"],
+      "assert": ["./node_modules/assert"],
+      "http": ["./node_modules/stream-http"],
+      "https": ["./node_modules/https-browserify"],
+      "os": ["./node_modules/os-browserify"],
+      "zlib" : ["./node_modules/browserify-zlib"],
+      "url" : ["./node_modules/url"],
+      "path" : ["./node_modules/path_browserify"],
+      "fs" : ["./node_modules/fs-web"],
+
+    },
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
