--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -4,7 +4,8 @@
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
     "types": [
-      "jasmine"
+      // "jasmine"
+      "node"
     ]
   },
   "files": [
@@ -16,3 +17,4 @@
     "src/**/*.d.ts"
   ]
 }
+
