--- a/package.json
+++ b/package.json
@@ -11,29 +11,43 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.1.3",
-    "@angular/cdk": "^12.2.13",
+    "@angular/cdk": "^13.1.3",
     "@angular/common": "~13.1.3",
     "@angular/compiler": "~13.1.3",
     "@angular/core": "~13.1.3",
-    "@angular/fire": "^7.2.0",
+    "@angular/fire": "^7.2.1",
     "@angular/forms": "~13.1.3",
-    "@angular/material": "^12.2.13",
+    "@angular/material": "^13.1.3",
     "@angular/platform-browser": "~13.1.3",
     "@angular/platform-browser-dynamic": "~13.1.3",
     "@angular/router": "~13.1.3",
-    "firebase": "^9.6.4",
+    "assert": "^2.0.0",
+    "browserify-zlib": "^0.2.0",
+    "crypto-browserify": "^3.12.0",
+    "firebase": "^9.6.7",
+    "firebase-admin": "^10.0.2",
+    "fs-web": "^1.0.1",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "requirejs": "^2.3.6",
+    "rxfire": "^6.0.0",
     "rxjs": "~6.6.0",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "tslib": "^2.1.0",
+    "url": "^0.11.0",
+    "util": "^0.12.4",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.1.4",
+    "@angular-devkit/build-angular": "^13.2.2",
     "@angular/cli": "~13.1.4",
     "@angular/compiler-cli": "~13.1.3",
     "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.20.42",
+    "@types/node": "^12.20.46",
     "jasmine-core": "~3.7.0",
-    "karma": "^6.3.12",
+    "karma": "^6.3.16",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
