--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,8 @@
     "module": "es2020",
     "lib": [
       "es2018",
-      "dom"
+      "dom",
+      "ES2021.String"
     ]
   },
   "angularCompilerOptions": {
